SSE 개선